# rpo-toolkit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: API.md  CLI.md  PAYLOADS.md  WASM.md
docs/schema/: pipeline-input.schema.json
examples/: classify.json  convert.json  covariance_mission.json  end_to_end_mc_closed_loop.json  end_to_end_mc_gentle.json  end_to_end_mc_mission.json  far_field_mission.json  mc.json  mc_mission.json  mission.json  multi_rev_mission.json  propagate.json  transfer.json  validate.json  validated_mission.json  waypoints.json
roe-cli/: Cargo.toml
roe-cli/src/: main.rs
roe-core/: Cargo.toml
roe-core/src/: constants.rs  drag_stm.rs  elements.rs  frames.rs  lambert.rs  lib.rs  mission.rs  propagator.rs  roe.rs  stm.rs  test_helpers.rs  types.rs  validation.rs
rpo-api/: Cargo.toml
rpo-api/src/: convert.rs  error.rs  lib.rs  main.rs  protocol.rs  session.rs  ws.rs
rpo-api/src/handlers/: classify.rs  cola.rs  common.rs  drag.rs  formation.rs  free_drift.rs  mc.rs  mod.rs  plan.rs  poca.rs  transfer.rs  validate.rs
rpo-api/tests/: integration.rs
rpo-cli/: Cargo.toml
rpo-cli/src/: cli.rs  demo.rs  error.rs  input.rs  main.rs
rpo-cli/src/commands/: classify.rs  common.rs  convert.rs  eclipse.rs  mc.rs  mission.rs  mod.rs  propagate.rs  roe.rs  safety.rs  transfer.rs  validate.rs
rpo-cli/src/output/: common.rs  eclipse_fmt.rs  formation_fmt.rs  insights.rs  markdown_fmt.rs  mc_fmt.rs  mission_fmt.rs  mod.rs  safety_fmt.rs  thresholds.rs
rpo-cli/src/output/markdown_fmt/: helpers.rs  mc.rs  mission.rs  mod.rs
rpo-cli/tests/: smoke.rs
rpo-core/: Cargo.toml  LICENSE-MIT
rpo-core/benches/: analytical.rs
rpo-core/src/: constants.rs  lib.rs  prelude.rs  test_helpers.rs  types.rs
rpo-core/src/elements/: conversions.rs  eci_ric_dcm.rs  eclipse.rs  frames.rs  gve.rs  keplerian_conversions.rs  mod.rs  ric.rs  roe.rs  roe_to_ric.rs
rpo-core/src/elements/eclipse/: ephemeris.rs  intervals.rs  mod.rs  shadow.rs  snapshots.rs  test_fixtures.rs
rpo-core/src/mission/: avoidance.rs  closest_approach.rs  cola_assessment.rs  config.rs  covariance.rs  errors.rs  free_drift.rs  lambert.rs  mod.rs  monte_carlo.rs  planning.rs  regression_tests.rs  safety.rs  targeting.rs  types.rs  validation.rs  waypoints.rs
rpo-core/src/mission/avoidance/: classify.rs  mod.rs  solve.rs  types.rs  verify.rs
rpo-core/src/mission/formation/: errors.rs  mod.rs  perch.rs  safety_envelope.rs  transit.rs  types.rs
rpo-core/src/mission/monte_carlo/: execution.rs  mod.rs  sampling.rs  statistics.rs  types.rs
rpo-core/src/mission/validation/: eclipse.rs  errors.rs  mod.rs  statistics.rs  trajectory.rs
rpo-core/src/mission/waypoints/: eclipse.rs  mod.rs  planning.rs  query.rs
rpo-core/src/pipeline/: convert.rs  errors.rs  execute.rs  mod.rs  projections.rs  types.rs
rpo-core/src/propagation/: covariance.rs  drag_stm.rs  j2_params.rs  keplerian.rs  lambert.rs  mod.rs  nyx_bridge.rs  propagator.rs  stm.rs
rpo-core/src/propagation/covariance/: mod.rs  propagate.rs  types.rs
rpo-core/src/propagation/nyx_bridge/: conversions.rs  dynamics.rs  errors.rs  mod.rs  propagate.rs
rpo-core/src/types/: eclipse.rs  elements.rs  mod.rs  roe.rs  spacecraft.rs  state.rs
rpo-nyx/: Cargo.toml
rpo-nyx/src/: lambert.rs  lib.rs  planning.rs
rpo-nyx/src/monte_carlo/: execution.rs  mod.rs  sampling.rs  statistics.rs  types.rs
rpo-nyx/src/nyx_bridge/: almanac.rs  conversions.rs  dynamics.rs  errors.rs  mod.rs  propagate.rs
rpo-nyx/src/pipeline/: errors.rs  mod.rs
rpo-nyx/src/validation/: eclipse.rs  errors.rs  mod.rs  statistics.rs  test_scenario.rs  trajectory.rs
rpo-nyx/tests/: regression_tests.rs
rpo-wasm/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  test.html
rpo-wasm/src/: analysis.rs  eclipse.rs  enrichment.rs  error.rs  lib.rs  mission.rs  planning.rs  query.rs  safety.rs
rpo-wasm/tests/: wasm.rs
