[package]
name = "roe-core"
description = "Core astrodynamics library for relative orbital element computation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
hifitime = "4"
serde = { version = "1", features = ["derive"] }
nyx-space = "2.3"
anise = "=0.9.5"

[dev-dependencies]
serde_json = "1"
