[package]
name = "rpo-api"
description = "WebSocket API server for RPO mission planning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
rpo-core = { path = "../rpo-core" }
rpo-nyx = { path = "../rpo-nyx" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hifitime = "4"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
anise = "0.9"

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
