[package]
name = "rpo-cli"
description = "CLI tool for RPO mission planning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rpo-core = { path = "../rpo-core" }
anise = "0.9"
hifitime = "4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.34"
