[package]
name = "rpo-cli"
description = "CLI tool for RPO mission planning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
rpo-core = { path = "../rpo-core" }
rpo-nyx = { path = "../rpo-nyx" }
anise = "0.9"
hifitime = "4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.34"
indicatif = "0.17"
clap_complete = "4"

[dev-dependencies]
serde_json = "1"
