[package]
name = "rpo-core"
description = "Core astrodynamics library for RPO mission planning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"

[features]
test-fixtures = []

[dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
hifitime = "4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
