[package]
name = "rpo-core"
description = "Core astrodynamics library for RPO mission planning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT OR Apache-2.0"

[features]
test-fixtures = []
wasm = ["dep:tsify-next", "dep:wasm-bindgen"]

[dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
hifitime = "4"
serde = { version = "1", features = ["derive"] }
tsify-next = { version = "0.5", optional = true, default-features = false, features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "analytical"
harness = false
